k8s/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: portfolio-deployment
  namespace: sherifemad
  labels:
    app: portfolio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-deployment
  template:
    metadata:
      labels:
        app: portfolio-deployment
    spec:
      containers:
      - name: portfolio-deployment
        image: sherifemad21/general:portfolio-v1
        resources:
          requests:
            memory: 150M
            cpu: 10m
          limits:
            memory: 200M
            cpu: 20m
        ports:
          - containerPort: 80
