k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-svc
  namespace: sherifemad
spec:
  selector:
    app: portfolio-deployment
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
